<resources>
    <string name="app_name">Light meter</string>
    <string name="take_photo">Photo</string>
    <string name="compute">compute</string>
    <string name="permissions">Permissions not granted by the user.</string>
    <string name="binding">Use case binding failed</string>
    <string name="photo_failed">Photo capture failed: </string>
    <string name="photo_success">Photo capture succeeded: </string>
    <string name="average_luminosity">Average luminosity: </string>
    <string name="camera_name_text">Name of camera</string>
    <string name="sensitivity_text">Sensitivity</string>
    <string name="aperture">Aperture</string>
    <string name="speed">Speed</string>
    <string name="automatic">Automatic</string>
    <string name="check_provider">Check your provider</string>
    <string name="locked">Locked:</string>
    <string name="aperture_not_found">Aperture was not found for this configuration F</string>
    <string name="seconds"> seconds</string>
    <string name="second"> second</string>
    <string name="error_calculation">There is an error in the choice of calculation</string>
    <string name="speed_too_high">The speed is too high for this configuration </string>
    <string name="calculated_speed">The calculated speed is 1/</string>
    <string name="calculated_speed_seconds">The calculated speed is </string>
    <string name="speed_bulb">Blub is not compatible with aperture priority compute</string>
</resources>